# 3pyrix

./: .gitignore  LICENSE  Makefile  README.md  Vì sao biết AI gây suy mòn kỹ năng nhưng chúng ta vẫn dùng - Tia sáng - tiasang.com.vn - 2026-04-19.epub  platformio.ini  pyproject.toml  shell.nix
docs/: reader_prefetch_idle_scan_plan.md
lib/AsyncTask/src/: AsyncTask.h  BackgroundTask.h  ScopedMutex.h
lib/BatteryMonitor/: README.md
lib/EInkDisplay/: README.md
lib/InputManager/: README.md
lib/SDCardManager/: README.md
lib/SharedSpi/: library.json
scripts/: create-sleep-screen.mjs  fontconvert.py  gen_cjk_theme.sh  package-lock.json  package.json
src/: Battery.h  FontManager.cpp  FontManager.h  IniParser.cpp  MappedInputManager.cpp  MappedInputManager.h  Theme.h  ThemeManager.cpp  ThemeManager.h  config.h  main.cpp
src/content/: BookmarkManager.cpp  ContentHandle.cpp  ContentHandle.h  ContentTypes.cpp  ContentTypes.h  EpubProvider.cpp  EpubProvider.h  ProgressManager.cpp  ProgressManager.h  ReaderNavigation.cpp  ReaderNavigation.h  TxtProvider.cpp  TxtProvider.h
src/core/: BootMode.cpp  BootMode.h  Core.cpp  Core.h  EventQueue.h  PapyrixSettings.cpp  PapyrixSettings.h  Result.cpp  Result.h  StateMachine.h  Types.h
src/drivers/: Cpu.cpp  Cpu.h  Display.cpp  Display.h  Input.cpp  Input.h  Network.h  Storage.cpp  Storage.h  TiltSensor.cpp  TiltSensor.h
src/network/: PapyrixWebServer.cpp  PapyrixWebServer.h  WifiCredentialStore.cpp  WifiCredentialStore.h
src/rendering/: XtcPageRenderer.cpp  XtcPageRenderer.h
src/states/: ErrorState.cpp  ErrorState.h  FileListState.cpp  FileListState.h  HomeState.cpp  HomeState.h  NetworkState.cpp  NetworkState.h  ReaderState.cpp  ReaderState.h  SettingsState.cpp  SleepState.cpp  SleepState.h  StartupState.h  State.h
src/ui/: Elements.cpp  Elements.h  Views.h
test/: CMakeLists.txt
test/common/: test_utils.cpp  test_utils.h
test/mocks/: InputManager.h  Logging.h  PageCache.h  SdFat.h
test/scripts/: build_tests.sh  run_tests.sh
test/unit/input/: MappedInputManagerTest.cpp
test/unit/navigation/: ReaderNavigationTest.cpp
test/unit/pagecache/: PageCacheHeaderTest.cpp
test/unit/toc/: ReaderTocNavigationTest.cpp
(+80 files in other folders)
